syntax = "proto3";

package com.sitewhere.grpc.service;

option java_multiple_files = true;
option java_package = "com.sitewhere.grpc.service";
option java_outer_classname = "LabelGenerationServices";

import "label-generation-model.proto";
import "sitewhere-common.proto";

// Label generation APIs.
service LabelGeneration {

	// Get label for area type.
	rpc GetAreaTypeLabel (GGetAreaTypeLabelRequest) returns (GGetAreaTypeLabelResponse) {}
}
	
// Request for creating label for area type.
message GGetAreaTypeLabelRequest {
	string generatorId = 1;
	com.sitewhere.grpc.model.GUUID areaTypeId = 2;
}
	
// Response for creating label for area type.
message GGetAreaTypeLabelResponse {
	com.sitewhere.grpc.model.GLabel label = 1;
}
