syntax = "proto3";

package com.sitewhere.grpc.service;

option java_multiple_files = true;
option java_package = "com.sitewhere.grpc.service";
option java_outer_classname = "DeviceEventServices";

import "device-event-model.proto";

// Device event management APIs.
service DeviceEventManagement {
}

// #####################
// ### DEVICE EVENTS ###
// #####################
